# task-distilled-small-model

./: .gitignore  README.md  RUNBOOK.md  SPEC.md  pyproject.toml  requirements-laptop.txt  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
dashboard/: app.py
data/gold/: LABELING_GUIDE.md  rating_instructions.md  rating_sheet.csv
docs/: 01-overview.md  02-Task-Distilled-Small-Model-thesis.docx  02-architecture.md  02-distillation-prompts.md  03-requirements.md  04-data-and-datasets.md  05-evaluation-metrics.md  06-environment-setup.md  07-build-roadmap.md  08-risks-pitfalls.md  09-references.md  10-glossary.md
docs/phase-2/: 01-overview.md  02-architecture.md  03-requirements.md  04-data-and-resources.md  05-evaluation-metrics.md  06-environment-setup.md  07-build-roadmap.md  08-risks-pitfalls.md  09-references.md  10-glossary.md  README.md
paper/: make_figures.py  paper.html
reports/: cost_teacher_labeling.json  eval_report.json  failure_analysis.md  filtering_report.json  gold_kappa_demo.json  gold_pipeline_demo.md  gold_predictions.jsonl  gold_sample_predictions.jsonl  money_table.md  ollama_packaging.md
scripts/: 00_generate_seed_inputs.py  01_generate_teacher_labels.py  02_filter_and_split.py  03_silver_verify.py  05_failure_analysis.py  evaluate.py  export_ollama.py  gold_kappa.py  gold_sample.py  gold_synthetic_raters.py  serve_path_shim.py  train.py
serve/: infer.py
tests/: conftest.py  test_cost_model.py  test_failure_analysis.py  test_filtering.py  test_gold_pipeline.py  test_metrics.py  test_schema.py
(+10 files in other folders)
